1.21.6 - New EventBus 7 A full rewrite and redesign of the library that offers much better performance, new features and fixes all previous design flaws See the migration guide here: https://gist.github.com/PaintNinja/ad82c224aecee25efac1ea3e2cf19b91
Co-authored-by: Paint_Ninja <PaintNinja@users.noreply.github.com>